# Rigil-Browser

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/js/: core.js  events.js  i18n.js  settings.js  tabs.js
