[package]
name = "rigil"
version = "0.1.1"
description = "A text browser created with Tauri"
authors = ["kutakake"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "blocking"] }
tokio = { version = "*", features = ["full"] }
tauri-plugin-shell = "2.0.0-rc.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
